--- a/publications/index.html
+++ b/publications/index.html
@@ -152,7 +152,7 @@
     <span class="author">Van Thuy Hoang</span>, O-Joun Lee.<br>
     Pre-training Graph Neural Networks on Molecules by using Subgraph-conditioned Graph Information Bottleneck.<br>
     <span class="venue">
-      In Proceedings of the 39th AAAI Conference on Artificial Intelligence (AAAI 2025).
+      In Proceedings of the 39th AAAI Conference on Artificial Intelligence 2025 (AAAI 2025).
     </span>
   </li>
 
@@ -160,7 +160,7 @@
     <span class="author">Van Thuy Hoang</span>, Hyeon-Ju Jeon, O-Joun Lee.<br>
     Mitigating Degree Bias in Graph Representation Learning with Learnable Structural Augmentation and Structural Self-attention.<br>
     <span class="venue">
-      IEEE Transactions on Network Science &amp; Engineering, 2025.
+      IEEE Transactions on Network Science &amp; Engineering2025 (IEEE TNSE 2025).
     </span>
   </li>
 
@@ -171,7 +171,7 @@
     Halal or Not: Knowledge Graph Completion for Predicting Cultural
     Appropriateness of Daily Products.<br>
     <span class="venue">
-      IEEE Access, 2025.
+      IEEE Access 2025.
     </span>
   </li>
 
@@ -179,13 +179,13 @@
     <span class="author">Van Thuy Hoang</span>, O-Joun Lee.<br>
     Pre-training Graph Neural Networks on 2D and 3D Molecular Structures
     by using Multi-View Conditional Information Bottleneck.<br>
-    <span class="venue">Under review, 2025.</span>
+    <span class="venue">Under review 2025.</span>
   </li>
 
   <li>
     <span class="author">Van Thuy Hoang</span>, O-Joun Lee.<br>
     Context-aware Graph Causality Inference for Few-Shot Molecular Property Prediction.<br>
-    <span class="venue">Under review, 2025.</span>
+    <span class="venue">Under review 2025.</span>
   </li>
 
   <li>
@@ -193,7 +193,7 @@
     Transitivity-Preserving Graph Representation Learning for Bridging
     Local Connectivity and Role-based Similarity.<br>
     <span class="venue">
-      In Proceedings of the 38th AAAI Conference on Artificial Intelligence (AAAI 2024).
+      In Proceedings of the 38th AAAI Conference on Artificial Intelligence 2024 (AAAI 2024).
     </span>
   </li>
 
@@ -202,7 +202,7 @@
     Kiosk Recommend System based on Self-Supervised Representation
     Learning of User Behaviors in Offline Retail.<br>
     <span class="venue">
-      IEEE Internet of Things Journal, February 2024.
+      IEEE Internet of Things Journal 2024 (IoT 2024).
     </span>
   </li>
 
@@ -212,7 +212,7 @@
     Companion Animal Disease Diagnostics Based on Literal-Aware Medical
     Knowledge Graph Representation Learning.<br>
     <span class="venue">
-      IEEE Access, 2023.
+      IEEE Access 2023.
     </span>
   </li>
 
@@ -221,7 +221,7 @@
     Y. W. Yoon, Sungyeop Jung, O-Joun Lee.<br>
     Graph Representation Learning and Its Applications: A Survey.<br>
     <span class="venue">
-      Sensors, 2023.
+      Sensors 2023.
     </span>
   </li>
 
@@ -231,7 +231,7 @@
     Automated Large Program Repair Based on Big Code.<br>
     <span class="venue">
       In Proceedings of the 9th International Symposium on Information
-      and Communication Technology (ISICT 2018).
+      and Communication Technology 2018 (ISICT 2018).
     </span>
   </li>
 
@@ -242,7 +242,7 @@
     A Deep Learning Approach.<br>
     <span class="venue">
       In Proceedings of the 18th International Symposium on Communications
-      and Information Technologies (ISCIT 2018).
+      and Information Technologies 2018 (ISCIT 2018).
     </span>
   </li>
 
@@ -250,7 +250,7 @@
     <span class="author">Van Thuy Hoang</span>, O-Joun Lee.<br>
     A Survey on Structure-Preserving Graph Transformers.<br>
     <span class="venue">
-      arXiv preprint, January 2024. arXiv:2401.16176.
+      arXiv preprint 2024. arXiv:2401.16176.
     </span>
   </li>
 
@@ -258,7 +258,7 @@
     Thanh Sang Nguyen, Jooho Lee, <span class="author">Van Thuy Hoang</span>, O-Joun Lee.<br>
     Connector 0.5: A Unified Framework for Graph Representation Learning.<br>
     <span class="venue">
-      arXiv preprint, April 2023. arXiv:2304.13195.
+      arXiv preprint 2023. arXiv:2304.13195.
     </span>
 
 
