--- a/publications/index.html
+++ b/publications/index.html
@@ -160,16 +160,13 @@
     <span class="author">Van Thuy Hoang</span>, Hyeon-Ju Jeon, O-Joun Lee.<br>
     Mitigating Degree Bias in Graph Representation Learning with Learnable Structural Augmentation and Structural Self-attention.<br>
     <span class="venue">
-      IEEE Transactions on Network Science &amp; Engineering2025 (IEEE TNSE 2025).
+      IEEE Transactions on Network Science &amp; Engineering 2025 (IEEE TNSE 2025).
     </span>
   </li>
 
   <li>
-    <span class="author">Van Thuy Hoang</span>, Tien-Bach-Thanh Do, Jinho Seo,
-    Seung Charlie Kim, Luong Vuong Nguyen, Duong Nguyen Minh Huy,
-    Hyeon-Ju Jeon, O-Joun Lee.<br>
-    Halal or Not: Knowledge Graph Completion for Predicting Cultural
-    Appropriateness of Daily Products.<br>
+    <span class="author">Van Thuy Hoang</span>, Tien-Bach-Thanh Do, Jinho Seo, Seung Charlie Kim, Luong Vuong Nguyen, Duong Nguyen Minh Huy, Hyeon-Ju Jeon, O-Joun Lee.<br>
+    Halal or Not: Knowledge Graph Completion for Predicting Cultural Appropriateness of Daily Products.<br>
     <span class="venue">
       IEEE Access 2025.
     </span>
@@ -177,8 +174,7 @@
 
   <li>
     <span class="author">Van Thuy Hoang</span>, O-Joun Lee.<br>
-    Pre-training Graph Neural Networks on 2D and 3D Molecular Structures
-    by using Multi-View Conditional Information Bottleneck.<br>
+    Pre-training Graph Neural Networks on 2D and 3D Molecular Structures by using Multi-View Conditional Information Bottleneck.<br>
     <span class="venue">Under review 2025.</span>
   </li>
 
@@ -190,8 +186,7 @@
 
   <li>
     <span class="author">Van Thuy Hoang</span>, O-Joun Lee.<br>
-    Transitivity-Preserving Graph Representation Learning for Bridging
-    Local Connectivity and Role-based Similarity.<br>
+    Transitivity-Preserving Graph Representation Learning for Bridging Local Connectivity and Role-based Similarity.<br>
     <span class="venue">
       In Proceedings of the 38th AAAI Conference on Artificial Intelligence 2024 (AAAI 2024).
     </span>
@@ -199,8 +194,7 @@
 
   <li>
     Nam-Gyu Jung, <span class="author">Van Thuy Hoang</span>, O-Joun Lee, Chang Choi.<br>
-    Kiosk Recommend System based on Self-Supervised Representation
-    Learning of User Behaviors in Offline Retail.<br>
+    Kiosk Recommend System based on Self-Supervised Representation Learning of User Behaviors in Offline Retail.<br>
     <span class="venue">
       IEEE Internet of Things Journal 2024 (IoT 2024).
     </span>
@@ -209,16 +203,14 @@
   <li>
     <span class="author">Van Thuy Hoang</span>, T. S. Nguyen, S. Lee, J. Lee,
     L. V. Nguyen, O.-J. Lee.<br>
-    Companion Animal Disease Diagnostics Based on Literal-Aware Medical
-    Knowledge Graph Representation Learning.<br>
+    Companion Animal Disease Diagnostics Based on Literal-Aware Medical Knowledge Graph Representation Learning.<br>
     <span class="venue">
       IEEE Access 2023.
     </span>
   </li>
 
   <li>
-    <span class="author">Van Thuy Hoang</span>, Hyeon-Ju Jeon, Eun-Soon You,
-    Y. W. Yoon, Sungyeop Jung, O-Joun Lee.<br>
+    <span class="author">Van Thuy Hoang</span>, Hyeon-Ju Jeon, Eun-Soon You, Y. W. Yoon, Sungyeop Jung, O-Joun Lee.<br>
     Graph Representation Learning and Its Applications: A Survey.<br>
     <span class="venue">
       Sensors 2023.
@@ -226,8 +218,7 @@
   </li>
 
   <li>
-    <span class="author">Van Thuy Hoang</span>, Phan Viet Anh,
-    Nguyen Xuan Hoai.<br>
+    <span class="author">Van Thuy Hoang</span>, Phan Viet Anh, Nguyen Xuan Hoai.<br>
     Automated Large Program Repair Based on Big Code.<br>
     <span class="venue">
       In Proceedings of the 9th International Symposium on Information
@@ -236,13 +227,11 @@
   </li>
 
   <li>
-    Ly Vu, <span class="author">Van Thuy Hoang</span>, Uy Nguyen, Tran Ngoc,
-    Diep Nguyen, Hoang Dinh, Eryk Dutkiewicz.<br>
+    Ly Vu, <span class="author">Van Thuy Hoang</span>, Uy Nguyen, Tran Ngoc, Diep Nguyen, Hoang Dinh, Eryk Dutkiewicz.<br>
     Time Series Analysis for Encrypted Traffic Classification:
     A Deep Learning Approach.<br>
     <span class="venue">
-      In Proceedings of the 18th International Symposium on Communications
-      and Information Technologies 2018 (ISCIT 2018).
+      In Proceedings of the 18th International Symposium on Communications and Information Technologies 2018 (ISCIT 2018).
     </span>
   </li>
 
