--- a/index.html
+++ b/index.html
@@ -210,7 +210,8 @@ blockquote.note {
 </p>
     
 </p>
-  <p>  <span class="red-text"> I will enter the job market in Vietnam and seeking Lecturer/Researcher positions in 2026.  </span>
+  <p>  <span class="red-text"> I will enter job market in Vietnam in 2026 and am actively seeking Lecturer/Researcher positions. 
+    Please feel free to contact me if there are any suitable opportunities.  </span>
 </p>
 
 
