--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ blockquote.note {
 
 <h2>Research Interests</h2>
 <p>
-  My research focuses on AI for Science and Bioinformatics, developing strategies to analyze and interpret biomedical data (e.g., molecules).</br>
+  My research focuses on AI for Science and Bioinformatics, developing strategies to analyze and interpret biomedical data (e.g., molecules).
   I am particularly interested in Graph Transformers and Large Language Models for knowledge discovery.
 </p>
 
