--- a/index.html
+++ b/index.html
@@ -223,10 +223,10 @@ blockquote.note {
 
 <h2>Research Interests</h2>
 <p>
-  My research focuses on AI for Science and Bioinformatics, developing strategies to analyze and interpret biomedical data (e.g., molecules).
-  I am particularly interested in Graph Transformers and Large Language Models for knowledge discovery.
+  My research focuses on AI for Science and Bioinformatics, focusing on analyzing and interpreting biomedical data (e.g., molecules).
+  I am particularly interested in theoretical foundations of machine learning: Information Theory, Causal Inference, Multi-view Learning, XAI, and Fairness Learning.
+  I am also interested in Graph Transformers and Large Language Models for knowledge discovery.
 </p>
-
 <h2>
   Selected Publications  <span class="subtitle-text">    <em>(Top-tier conferences/journals)</em>  </span>
 </h2>
