--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ blockquote.note {
 
 <h2>Research Interests</h2>
 <p>
-  My research focuses on AI for Science and Bioinformatics, focusing on analyzing and interpreting biomedical data (e.g., molecules).
+  My research focuses on AI for Science & Bioinformatics, focusing on analyzing and interpreting biomedical data (molecules).</br>
   I am particularly interested in theoretical foundations of machine learning: Information Theory, Causal Inference, Multi-view Learning, XAI, and Fairness Learning.
   I am also interested in Graph Transformers and Large Language Models for knowledge discovery.
 </p>
