--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ blockquote.note {
 <h2>Research Interests</h2>
 <p>
   My research focuses on AI for Science & Bioinformatics, focusing on analyzing and interpreting biomedical data (molecules).</br>
-  I am particularly interested in theoretical foundations of machine learning: Information Theory, Causal Inference, Multi-view Learning, XAI, and Fairness Learning.</br>
+  I am particularly interested in theoretical foundations of machine learning: Causal Inference, Invariant Representations, Information Bottleneck, Multi-view Learning, XAI, and Fairness Learning.</br>
   I am also interested in GNNs, Graph Transformers, and Large Language Models for knowledge discovery.
 </p>
 <h2>
