--- a/publications/index.html
+++ b/publications/index.html
@@ -138,10 +138,7 @@
 <h1>Publications</h1>
 
 <p>
-  Full list of my publications.
-  For the most up-to-date records, please refer to my
-  <a href="https://scholar.google.com.vn/citations?user=E7Cc8rAAAAAJ" target="_blank">
-    Google Scholar profile
+ For the up-to-date records, please refer to my <a href="https://scholar.google.com.vn/citations?user=E7Cc8rAAAAAJ" target="_blank"> Google Scholar profile
   </a>.
 </p>
 
