--- a/index.html
+++ b/index.html
@@ -195,14 +195,6 @@ blockquote.note {
     <p class="subtitle">
       Ph.D. Student in Artificial Intelligence
     </p>
-<p>
-  Hi, I’m Van Thuy Hoang, a PhD Student at the Catholic University of Korea.
-  I’m a member of the
-  <a href="https://nslab-cuk.github.io/" target="_blank">Network Science Lab</a>
-  led by
-  <a href="https://nslab-cuk.github.io/member/ojlee" target="_blank">
-    Prof. O-Joun Lee
-  </a>.
 
 <p>
   I am open to research collaboration and academic opportunities.
@@ -218,7 +210,15 @@ blockquote.note {
 
   </div>
 
+<figure class="profile-figure">
   <img src="profile.jpg" alt="Van Thuy Hoang" class="profile-img">
+  <figcaption class="profile-caption">
+    Ph.D. Student at the Catholic University of Korea.<br>
+    Member of the <a href="https://nslab-cuk.github.io/" target="_blank">Network Science Lab</a>,
+    advised by <a href="https://nslab-cuk.github.io/member/ojlee" target="_blank">Prof. O-Joun Lee</a>.
+  </figcaption>
+</figure>
+  
 </div>
 
 <h2>Research Interests</h2>
