--- a/index.html
+++ b/index.html
@@ -213,9 +213,10 @@ blockquote.note {
 <figure class="profile-figure">
   <img src="profile.jpg" alt="Van Thuy Hoang" class="profile-img">
   <figcaption class="profile-caption">
-    Ph.D. Student at the Catholic University of Korea.<br>
-    Member of the <a href="https://nslab-cuk.github.io/" target="_blank">Network Science Lab</a>,
-    advised by <a href="https://nslab-cuk.github.io/member/ojlee" target="_blank">Prof. O-Joun Lee</a>.
+    Hi, I’m Van Thuy Hoang, a PhD Student <br>
+    at the Catholic University of Korea.<br>
+    Member of the <a href="https://nslab-cuk.github.io/" target="_blank">NS Lab</a>,<br>
+    led by <a href="https://nslab-cuk.github.io/member/ojlee" target="_blank">Prof. O-Joun Lee</a>.
   </figcaption>
 </figure>
   
