--- a/index.html
+++ b/index.html
@@ -212,12 +212,10 @@ blockquote.note {
 
 <figure class="profile-figure">
   <img src="profile.jpg" alt="Van Thuy Hoang" class="profile-img">
-  <figcaption class="profile-caption">
-    Hi, I’m Van Thuy Hoang, a PhD Student <br>
-    at the Catholic University of Korea.<br>
-    Member of the <a href="https://nslab-cuk.github.io/" target="_blank">NS Lab</a>,<br>
-    led by <a href="https://nslab-cuk.github.io/member/ojlee" target="_blank">Prof. O-Joun Lee</a>.
-  </figcaption>
+<figcaption class="profile-caption">
+  Ph.D. Student · Catholic University of Korea<br>
+  Network Science Lab
+</figcaption>
 </figure>
   
 </div>
