--- a/index.html
+++ b/index.html
@@ -195,7 +195,9 @@ blockquote.note {
     <p class="subtitle">
       Ph.D. Student in Artificial Intelligence
     </p>
-
+<p> Hi, I’m Van Thuy Hoang, a PhD Student at the Catholic University of Korea. 
+  I’m a member of the <a href="https://nslab-cuk.github.io/" target="_blank">NS Lab</a> led by <a href="https://nslab-cuk.github.io/member/ojlee" target="_blank"> Prof. O-Joun Lee 
+  </a>.
 <p>
   I am open to research collaboration and academic opportunities.
   Please feel free to <a href="mailto:hoangvanthuy90@gmail.com">Email me</a> if you are interested (hoangvanthuy90@gmail.com).
@@ -210,13 +212,7 @@ blockquote.note {
 
   </div>
 
-<figure class="profile-figure">
-  <img src="profile.jpg" alt="Van Thuy Hoang" class="profile-img">
-<figcaption class="profile-caption">
-  Ph.D. Student · Catholic University of Korea<br>
-  Network Science Lab
-</figcaption>
-</figure>
+<img src="profile.jpg" alt="Van Thuy Hoang" class="profile-img">
   
 </div>
 
