--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ blockquote.note {
 
 <h2>Research Interests</h2>
 <p>
-  My research focuses on AI for Science & Bioinformatics, focusing on analyzing and interpreting biomedical data (molecules).</br>
+  My research focuses on AI for Science & Bioinformatics, targeting the analysis and interpretation of biomedical data (molecules).</br>
   I am interested in theoretical foundations of machine learning: Causal Inference, Invariant Representations, Information Bottleneck, Multi-view Learning, XAI, and Fairness.</br>
   I am also interested in GNNs, Graph Transformers, and Large Language Models for knowledge discovery.
 </p>
