--- a/index.html
+++ b/index.html
@@ -218,8 +218,8 @@ blockquote.note {
 
 <h2>Research Interests</h2>
 <p>
-  My research focuses on AI for Science & Bioinformatics, targeting the analysis and interpretation of biomedical data (molecules).</br>
-  I am interested in theoretical foundations of machine learning: Causal Inference, Invariant Representations, Information Bottleneck, Multi-view Learning, XAI, and Fairness.</br>
+  My research focuses on AI for Science & Bioinformatics, analyzing and interpreting biomedical data (molecules).</br>
+  I am interested in theoretical foundations of machine learning: Causal Inference, Invariant Representations, Information Bottleneck, Multi-view Learning, Explainable AI, and Fairness.</br>
   I am also interested in GNNs, Graph Transformers, and Large Language Models for knowledge discovery.
 </p>
 <h2>
