--- a/index.html
+++ b/index.html
@@ -217,11 +217,17 @@ blockquote.note {
 </div>
 
 <h2>Research Interests</h2>
-<p>
-  My research focuses on AI for Science & Bioinformatics, analyzing and interpreting biomedical data (molecules).</br>
-  I am interested in theoretical foundations of machine learning: Causal Inference, Invariant Representations, Information Bottleneck, Multi-view Learning, Explainable AI, and Fairness.</br>
-  I am also interested in GNNs, Graph Transformers, and Large Language Models for knowledge discovery.
-</p>
+<ul>
+  <li>
+    My research focuses on AI for Science and Bioinformatics, analyzing and interpreting biomedical data such as molecular structures.
+  </li>
+  <li>
+    I am interested in the theoretical foundations of machine learning, including Causal Inference, Invariant Representations, Information Bottleneck, Multi-view Learning, Explainable AI, and Fairness.
+  </li>
+  <li>
+    I use Graph Neural Networks, Graph Transformers, and Large Language Models as tools for knowledge discovery.
+  </li>
+</ul>
 <h2>
   Selected Publications  <span class="subtitle-text">    <em>(Top-tier conferences/journals)</em>  </span>
 </h2>
