--- a/index.html
+++ b/index.html
@@ -219,13 +219,13 @@ blockquote.note {
 <h2>Research Interests</h2>
 <ul>
   <li>
-    My research focuses on AI for Science and Bioinformatics, analyzing and interpreting biomedical data such as molecular structures.
+    My research focuses on AI for Science & Bioinformatics, analyzing and interpreting biomedical data (molecules).
   </li>
   <li>
-    I am interested in the theoretical foundations of machine learning, including Causal Inference, Invariant Representations, Information Bottleneck, Multi-view Learning, Explainable AI, and Fairness.
+    I am interested in the theoretical foundations of machine learning: Causal Inference, Invariant Representations, Information Bottleneck, Multi-view Learning, Explainable AI, and Fairness.
   </li>
   <li>
-    I use Graph Neural Networks, Graph Transformers, and Large Language Models as tools for knowledge discovery.
+    I am also interested in GNNs, Graph Transformers, and Large Language Models for knowledge discovery.
   </li>
 </ul>
 <h2>
