--- a/index.html
+++ b/index.html
@@ -259,12 +259,12 @@ blockquote.note {
 <p>
 I view Wisdom—not simply Knowledge—as relational, arising from inter-dependent relationships rather than static/isolated entities.
 Grounded in fundamental theories from both Buddhist insight and Christian thought, all existence flows from and returns to a unifying source. 
-These foundations align deeply with my theoretical foundations: Information Bottleneck and Causal Inference:
+These foundations align deeply with my theoretical foundations: Information Bottleneck and Causal Inference.
  
 </p>
 
 <blockquote class="note">
-There is no central self —only the Original Mind, Buddha-nature/Ground of Soul— emerging through a series of interdependent arisings.  
+There is no central self —only the Original Mind, the Buddha-nature/Ground of Soul— emerging through a series of interdependent arisings.  
 The nature of reality thus unfolds as an invariant causal network.
 </blockquote>
 
