--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ blockquote.note {
       Ph.D. Student in Artificial Intelligence
     </p>
 <p> Hi, I’m Van Thuy Hoang, a PhD Student at the Catholic University of Korea. 
-  I’m a member of the <a href="https://nslab-cuk.github.io/" target="_blank">NS Lab</a> led by <a href="https://nslab-cuk.github.io/member/ojlee" target="_blank"> Prof. O-Joun Lee 
+  I’m a member of the <a href="https://nslab-cuk.github.io/" target="_blank">NS Lab</a> advised by <a href="https://nslab-cuk.github.io/member/ojlee" target="_blank"> Prof. O-Joun Lee 
   </a>.
 <p>
   I am open to research collaboration and academic opportunities.
