--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ blockquote.note {
   </a>.
 <p>
   I am open to research collaboration and academic opportunities.
-  Please feel free to <a href="mailto:hoangvanthuy90@gmail.com">Email me</a> if you are interested (hoangvanthuy90@gmail.com).
+  Please feel free to <a href="mailto:hoangvanthuy90@gmail.com">Email me</a> if you are interested (via hoangvanthuy90@gmail.com).
 </p>
     
 </p>
