--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ blockquote.note {
     My research focuses on AI for Science & Bioinformatics, analyzing and interpreting biomedical data (molecules).
   </li>
   <li>
-    I am interested in the theoretical foundations of machine learning: Causal Inference, Invariant Representations, Information Bottleneck, Multi-view Learning, Explainable AI, and Fairness.
+    Research interests: theoretical foundations of machine learning, like Causal Inference, Invariant Representations, Information Bottleneck, Multi-view Learning, Explainable AI, and Fairness.
   </li>
   <li>
     I am also interested in GNNs, Graph Transformers, and Large Language Models for knowledge discovery.
