--- a/index.html
+++ b/index.html
@@ -219,10 +219,10 @@ blockquote.note {
 <h2>Research Interests</h2>
 <ul>
   <li>
-    My research focuses on AI for Science & Bioinformatics, analyzing and interpreting biomedical data (molecules).
+    My research targets AI for Science & Bioinformatics, analyzing and interpreting biomedical data (e.g., molecules).
   </li>
   <li>
-    Research interests: theoretical foundations of machine learning, like Causal Inference, Invariant Representations, Information Bottleneck, Multi-view Learning, Explainable AI, and Fairness.
+    I focus on the theoretical foundations of machine learning: Causal Inference, Invariant Representations, Information Bottleneck, Multi-view Learning, Explainable AI, and Fairness.
   </li>
   <li>
     I am also interested in GNNs, Graph Transformers, and Large Language Models for knowledge discovery.
