--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ blockquote.note {
 </p>
     
 </p>
-  <p>  <span class="red-text"> I will enter job market in Vietnam in 2026 and am seeking Lecturer/Researcher positions. 
+  <p>  <span class="red-text"> I will enter job market in Vietnam in early 2026 and am seeking Lecturer/Researcher positions. 
     Please feel free to contact me if there are any suitable opportunities.  </span>
 </p>
 
