--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ blockquote.note {
 <h2>Research Interests</h2>
 <ul>
   <li>
-    My research targets AI for Science & Bioinformatics, analyzing and interpreting biomedical data (e.g., molecules).
+    My research targets AI for Science & Bioinformatics (drug discovery), analyzing and interpreting biomedical data (molecules).
   </li>
   <li>
     I focus on the theoretical foundations of machine learning: Causal Inference, Invariant Representations, Information Bottleneck, Multi-view Learning, Explainable AI, and Fairness.
