--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ blockquote.note {
     I focus on the theoretical foundations of machine learning: Causal Inference, Invariant Representations, Information Bottleneck, Multi-view Learning, Explainable AI, and Fairness.
   </li>
   <li>
-    I am also interested in GNNs, Graph Transformers, and Large Language Models for knowledge discovery.
+    I am interested in Graph Neural Networks, Graph Transformers, and Large Language Models for knowledge discovery.
   </li>
 </ul>
 <h2>
