--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ blockquote.note {
     
 </p>
   <p>  <span class="red-text"> I will enter job market in Vietnam in 2026 and am seeking Lecturer/Researcher positions. 
-    Please feel free to contact me if there are any suitable opportunities.  </span>
+    Please feel free to contact me if there are any opportunities.  </span>
 </p>
 
 
