--- a/index.html
+++ b/index.html
@@ -200,12 +200,12 @@ blockquote.note {
   </a>.
 <p>
   I am open to research collaboration and academic opportunities.
-  Please feel free to <a href="mailto:hoangvanthuy90@gmail.com">Email me</a> (hoangvanthuy90@gmail.com).
+  Please feel free to <a href="mailto:hoangvanthuy90@gmail.com">Email me</a>.
 </p>
     
 </p>
   <p>  <span class="red-text"> I will enter job market in Vietnam in 2026 and am seeking Lecturer/Researcher positions. 
-    Please feel free to contact me if there are any opportunities.  </span>
+    Please feel free to contact me if there are any opportunities (hoangvanthuy90@gmail.com).  </span>
 </p>
 
 
