--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ blockquote.note {
   </a>.
 <p>
   I am open to research collaboration and academic opportunities.
-  Please feel free to <a href="mailto:hoangvanthuy90@gmail.com">Email me</a>.
+  Please feel free to <a href="mailto:hoangvanthuy90@gmail.com">Email</a> me.
 </p>
     
 </p>
