--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ blockquote.note {
     <p class="subtitle">
       Ph.D. Student in Artificial Intelligence
     </p>
-<p> Hi, I’m Van Thuy Hoang, a PhD student at the Catholic University of Korea, South Korea. 
+<p> Hi, I’m Van Thuy Hoang, a PhD student at the Catholic University of Korea, South Korea.</br>
   I’m a member of the <a href="https://nslab-cuk.github.io/" target="_blank">NS Lab</a> advised by <a href="https://nslab-cuk.github.io/member/ojlee" target="_blank"> Prof. O-Joun Lee 
   </a>.
 <p>
