--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ blockquote.note {
     My research targets AI for Science & Bioinformatics (drug discovery), analyzing and interpreting biomedical data (molecules).
   </li>
   <li>
-    I focus on the theoretical foundations of machine learning: Causal Inference, Invariant Representations, Information Bottleneck, Multi-view Learning, Explainable AI, and Fairness.
+    I focus on the theoretical foundations of machine learning: Causal Inference, Invariant Representations, Information Bottleneck, Multi-view Learning, Explainable AI, Pattern Recognition, and Fairness Learning.
   </li>
   <li>
     I am interested in Graph Neural Networks, Graph Transformers, and Large Language Models for knowledge discovery.
